--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
-    "three": "^0.142.0"
+    "three": "^0.142.0",
+    "xml-loader": "^1.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
